// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect works while firing fail events 1`] = `
Array [
  Object {
    "fails": 0.48196021454099003,
  },
]
`;

exports[`expect works while firing fail events 2`] = `
Object {
  "file": "snapshotEvents.test.js",
  "fullTitle": "snapshot events test expect works while firing fail events",
  "snapshotFile": "__snapshots__/snapshotEvents.test.js.snap",
  "title": "expect works while firing fail events",
}
`;

exports[`expect works while firing pass events 1`] = `
Array [
  Object {
    "that": "this",
  },
]
`;

exports[`expect works while firing pass events 2`] = `
Object {
  "file": "snapshotEvents.test.js",
  "fullTitle": "snapshot events test expect works while firing pass events",
  "snapshotFile": "__snapshots__/snapshotEvents.test.js.snap",
  "title": "expect works while firing pass events",
}
`;
